[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.117.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.11.0",
    "alembic>=1.16.5",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
    "pyjwt>=2.10.1",
    "jinja2>=3.1.6",
    "geoalchemy2>=0.18.0",
    "httpx>=0.28.1",
    "aiofiles>=25.1.0",
    "redis[hiredis]>=5.0.0",
    "celery>=5.5.3",
    "yookassa>=3.8.0",
    "boto3>=1.41.5",
    "firebase-admin>=7.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "aiosqlite>=0.19.0",
    "sqladmin[full]>=0.22.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
